--- a/public/css.css
+++ b/public/css.css
@@ -1,7 +1,9 @@
-
 body{
-	background-color:#FFCCFF;
-	font-family: 'Architects Daughter', cursive;
+	
+    color:#000;
+
+;
+	font-family: 'Playfair Display SC', cursive;
 }
 
 a{
